# videogen

./: .env.example  .gitignore  README.md  SPEC-login-fix.md  pyproject.toml  run.sh
src/videogen/: __init__.py  assets.py  browser.py  cli.py  composer.py  config.py  models.py  scriptwriter.py  server.py
tests/: test_assets.py  test_browser.py  test_composer.py  test_models.py  test_runs.py  test_scriptwriter.py
ui/: index.html
